--- a/notes/day7-slides.Rmd
+++ b/notes/day7-slides.Rmd
@@ -174,6 +174,8 @@ polls_data %>%
 
 ## Picking a task {.scrollable}
 
+![A screenshot of data. Source: *The Functional Art*](images/fa.6.15.jpeg)
+
 ![A proportional symbol map. Source: *The Functional Art*](images/fa.6.16.jpeg)
 
 ![Chloropeth map. Source: *The Functional Art*](images/fa.6.17.jpeg)
